[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Add_Order_Kevin.gd" type="Script" id=1]
[ext_resource path="res://commodore_64/Commodore Angled v1.2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Login.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/buttons/view_orders_button.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font" ]

[node name="Node2D" type="Node2D"]

position = Vector2( 233.78, -56.7427 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
__meta__ = {
"_edit_vertical_guides_": [ 520.812 ]
}

[node name="Employee Login Label" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 69.0
margin_right = 540.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Add New Order"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Customer Name" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_top = 131.0
margin_right = 298.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Customer Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Customer Name LineEdit" type="LineEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_top = 158.0
margin_right = 494.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Total Price" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 208.0
margin_right = 295.0
margin_bottom = 237.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Total Price:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Total Price LineEdit" type="LineEdit" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 237.0
margin_right = 492.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Employee" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 98.0
margin_top = 290.0
margin_right = 448.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Employee:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Employee Input" type="LineEdit" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 319.0
margin_right = 492.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Add Order" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 239.0
margin_top = 366.0
margin_right = 339.0
margin_bottom = 393.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Order"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Add Item" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 129.0
margin_top = 371.0
margin_right = 201.0
margin_bottom = 391.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Item"
flat = false
align = 1

[node name="View All Orders" parent="." index="9" instance=ExtResource( 4 )]

margin_left = -231.0
margin_top = 58.0
margin_right = 27.0
margin_bottom = 108.0
text = "Back"

[connection signal="text_changed" from="Customer Name LineEdit" to="." method="_on_Customer_Name_LineEdit_text_changed"]

[connection signal="text_changed" from="Total Price LineEdit" to="." method="_on_Total_Price_LineEdit_text_changed"]

[connection signal="text_changed" from="Employee Input" to="." method="_on_Employee_Input_text_changed"]

[connection signal="pressed" from="Add Order" to="." method="_on_Add_Order_pressed"]

[connection signal="pressed" from="Add Item" to="." method="_on_Add_Item_pressed"]


